Added support for debugging with JMX support. But commented out for now.